<?xml version="1.0"?>
<package format="2">
  <name>pose_graph</name>
  <version>1.0.0</version>
  <description>The pose_graph package</description>

  <maintainer email="srahman@email.sc.edu">Sharmin Rahman</maintainer>
  <license>BSD</license>
  

  <buildtool_depend>catkin</buildtool_depend>
  <depend>okvis_ros</depend>

</package>
