<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pose_graph</name>
  <version>1.0.0</version>
  <description>The pose_graph package</description>

  <author email="bjoshi@email.sc.edu">Bharat Joshi</author>
  <author email="srahman@email.sc.edu">Sharmin Rahman</author>

  <maintainer email="bjoshi@email.sc.edu">Bharat Joshi</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>okvis_ros</depend>
  <depend>rclcpp</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
